menú navar hecho

--- a/index.html
+++ b/index.html
@@ -10,44 +10,115 @@
 </head>
 <body>
     <header class="encabezado">
-        <h1 id="texto1">TABLAS EJERCICIOS:</h1>
+        <h1 id="titulo1">TABLAS EJERCICIOS:</h1>
     </header>
-
-    <div>
-        <div class="fila3">
-            <div class="col">
-                <div class="tabla1">
-                    <ul> 
-                    <h3>Declaración:</h3>
-                    <p>27/11/2006</p>
-                    <p>Hospitalet de Llobregat, 08901</p> 
-                    <p>+34 645 37 48 36</p> 
-                    <p>paulamorenoleon6@gmail.com</p>
-                    </ul>   
-                </div>          
-            </div>
-            <div class="col">
-                <div class="tabla2">
-                    <ul>
-                        <h3>Descripción:</h3>
-                        <p>Tocar el tambor</p>
-                        <p>Ir al gimnasio</p>
-                        <p>Leer</p>
-                        <p>Visitar sitios</p>
-                    </ul>
-                </div>         
-            </div>
-            <div class="col">
-                <div class="tabla3">
-                    <ul>
-                        <h3>Juego/nivel:</h3>
-                        <p>Castellano: Nativo</p>
-                        <p>Catalan: Nativo </p>
-                        <p>Inglés: Básico</p>
-                    </ul>
-                </div>          
-            </div>
-        </div>
-    </div>
+    <table class="tabla">
+        <h2 id="titulo2">Flexbox froggy:</h2>
+        <tr>
+            <th>Declaración</th>
+            <th>Descripción</th>
+            <th>Juego/Numero</th>
+        </tr>
+        <tr>
+            <td>justify-content: right;</td>
+            <td>Esta declaración coloca el contenido a la derecha.</td>
+            <td>Flexbox froggy / Nivel 1</td>
+        </tr>
+        <tr>
+            <td>justify-content: center;</td>
+            <td>Esta declaración coloca el contenido en el centro.</td>
+            <td>Flexbox froggy / Nivel 2</td>
+        </tr>
+        <tr>
+            <td>justify-content: space-around;</td>
+            <td>Esta declaración hará que haya un espacio entre cada elemento y que también haya un espacio al rededor del elemento.</td>
+            <td>Flexbox froggy / Nivel 3</td>
+        </tr>
+        <tr>
+            <td>justify-content: space-between;</td>
+            <td>Esta declaración hará que los elementos se pongan con un espacio igual entre ellos.</td>
+            <td>Flexbox froggy / Nivel 4</td>
+        </tr>
+        <tr>
+            <td>align-items: flex-end;</td>
+            <td>Esta declaración hará que los elementos se alineen en la parte de abajo del contenedor.</td>
+            <td>Flexbox froggy / Nivel 5</td>
+        </tr>
+        <tr>
+            <td>align-items: center;</td>
+            <td>Esta declaración hace que los elementos se coloquen en el centro.</td>
+            <td>Flexbox froggy / Nivel 6</td>
+        </tr>
+        <tr>
+            <td>flex-direction: row-reverse;</td>
+            <td>Esta declaración hace que los elementos se ordenen en el sentido contrario en el que estan.</td>
+            <td>Flexbox froggy / Nivel 7</td>
+        </tr>
+        <tr>
+            <td>flex-direction: column;</td>
+            <td>Esta declaración hace que los elementos se coloquen uno encima del otro (en columna).</td>
+            <td>Flexbox froggy / Nivel 8</td>
+        </tr>
+        <tr>
+            <td>justify-content: flex-end;</td>
+            <td>Esta declaración pone los elementos en el extremo final del contenedor.</td>
+            <td>Flexbox froggy / Nivel 9</td>
+        </tr>        
+        <tr>
+            <td>flex-direction: column-reverse;</td>
+            <td>Esta declaración lo que hace es colocar los elementos uno debajo de otro (modo columna) y los invierte.</td>
+            <td>Flexbox froggy / Nivel 12</td>
+        </tr>        
+        <tr>
+            <td>order: 2;</td>
+            <td>Esta declaración hace que el elemento en especial aparezca en el sitio que indiques con el número.</td>
+            <td>Flexbox froggy / Nivel 14</td>
+        </tr>        
+        <tr>
+            <td>order: -1;</td>
+            <td>Esta declaración hace que el elemento en especifico que queremos se ponga el primero de todos.</td>
+            <td>Flexbox froggy / Nivel 15</td>
+        </tr>        
+        <tr>
+            <td>align-self: flex-end;</td>
+            <td>Esta declaración hace que un elemento especifico se alinee en el extremo inferior del contenedor.</td>
+            <td>Flexbox froggy / Nivel 16</td>
+        </tr>        
+        <tr>
+            <td>flex-wrap: wrap;</td>
+            <td>Esta declaración permite que los elementos se muevan a la siguiente linea si no hay mucho espacio en la que estan.</td>
+            <td>Flexbox froggy / Nivel 18</td>
+        </tr>        
+        <tr>
+            <td>flex-flow: column wrap;</td>
+            <td>Esta declaración lo que hace es colocar los elementos en columnas y si no caben todos los movera a una nueva.</td>
+            <td>Flexbox froggy / Nivel 20</td>
+        </tr>        
+        <tr>
+            <td>align-content: flex-start;</td>
+            <td>Esta declaración pone a los elementos al principio de todo del contenedor.</td>
+            <td>Flexbox froggy / Nivel 21</td>
+        </tr>
+        <tr>
+            <td>align-content: flex-end;</td>
+            <td>Esta declaración pone a los elementos en el extremo del contenedor.</td>
+            <td>Flexbox froggy / Nivel 22</td>
+        </tr>
+        <tr>
+            <td>align-content: center;</td>
+            <td>Esta declaración hace que las lineas de los elementos se coloquen en el centro del contenedor.</td>
+            <td>Flexbox froggy / Nivel 23</td>
+        </tr>
+        <tr>
+            <td>align-content: space-between;</td>
+            <td>Esta declaración hace que las lineas de los elementos se separen pero dejando el mayor espacio disponible entre ellas.</td>
+            <td>Flexbox froggy / Nivel 24</td>
+        </tr>
+        <tr>
+            <td>flex-flow: column-reverse wrap-reverse;</td>
+            <td>Esta declaración hace que los elementos se apilen en columnas de abajo hacia arriba.</td>
+            <td>Flexbox froggy / Nivel 24</td>
+        </tr>
+    </table>
 </body>
 </html>
