--- a/index.html
+++ b/index.html
@@ -22,102 +22,117 @@
         <tr>
             <td>justify-content: right;</td>
             <td>Esta declaración coloca el contenido a la derecha.</td>
-            <td>Flexbox froggy / Nivel 1</td>
+            <td>Froggy:1</td>
         </tr>
         <tr>
             <td>justify-content: center;</td>
             <td>Esta declaración coloca el contenido en el centro.</td>
-            <td>Flexbox froggy / Nivel 2</td>
+            <td>Froggy:2 , Defense: 1 , Adventure:1/8/13/21/23</td>
         </tr>
         <tr>
             <td>justify-content: space-around;</td>
             <td>Esta declaración hará que haya un espacio entre cada elemento y que también haya un espacio al rededor del elemento.</td>
-            <td>Flexbox froggy / Nivel 3</td>
+            <td>Froggy:3 , Defense:5 , Adventure:4/22</td>
         </tr>
         <tr>
             <td>justify-content: space-between;</td>
             <td>Esta declaración hará que los elementos se pongan con un espacio igual entre ellos.</td>
-            <td>Flexbox froggy / Nivel 4</td>
+            <td>Froggy:4 , Defense:3 , Adventure:3/9</td>
         </tr>
         <tr>
             <td>align-items: flex-end;</td>
             <td>Esta declaración hará que los elementos se alineen en la parte de abajo del contenedor.</td>
-            <td>Flexbox froggy / Nivel 5</td>
+            <td>Froggy:5 , Defense:2 , Adventure:7/9/22</td>
         </tr>
         <tr>
             <td>align-items: center;</td>
             <td>Esta declaración hace que los elementos se coloquen en el centro.</td>
-            <td>Flexbox froggy / Nivel 6</td>
+            <td>Froggy:6 , Defense:5 , Adventure:6/8/13</td>
         </tr>
         <tr>
             <td>flex-direction: row-reverse;</td>
             <td>Esta declaración hace que los elementos se ordenen en el sentido contrario en el que estan.</td>
-            <td>Flexbox froggy / Nivel 7</td>
+            <td>Froggy:7 , Adventure:11/13</td>
         </tr>
         <tr>
             <td>flex-direction: column;</td>
             <td>Esta declaración hace que los elementos se coloquen uno encima del otro (en columna).</td>
-            <td>Flexbox froggy / Nivel 8</td>
+            <td>Froggy:8 , Defense:7 , Adventure:10/12</td>
         </tr>
         <tr>
             <td>justify-content: flex-end;</td>
             <td>Esta declaración pone los elementos en el extremo final del contenedor.</td>
-            <td>Flexbox froggy / Nivel 9</td>
+            <td>Froggy:9 , Adventure:2/12/17</td>
         </tr>        
         <tr>
             <td>flex-direction: column-reverse;</td>
             <td>Esta declaración lo que hace es colocar los elementos uno debajo de otro (modo columna) y los invierte.</td>
-            <td>Flexbox froggy / Nivel 12</td>
+            <td>Froggy:12 , Adventure:17/22/23</td>
         </tr>        
         <tr>
             <td>order: 2;</td>
             <td>Esta declaración hace que el elemento en especial aparezca en el sitio que indiques con el número.</td>
-            <td>Flexbox froggy / Nivel 14</td>
+            <td>Froggy:14 , Defense:10 , Adventure:14/16/18/24</td>
         </tr>        
         <tr>
             <td>order: -1;</td>
             <td>Esta declaración hace que el elemento en especifico que queremos se ponga el primero de todos.</td>
-            <td>Flexbox froggy / Nivel 15</td>
+            <td>Froggy:15 , Defense:10</td>
         </tr>        
         <tr>
             <td>align-self: flex-end;</td>
             <td>Esta declaración hace que un elemento especifico se alinee en el extremo inferior del contenedor.</td>
-            <td>Flexbox froggy / Nivel 16</td>
+            <td>Froggy:16 , Defense:11 , Adventure:16</td>
         </tr>        
         <tr>
             <td>flex-wrap: wrap;</td>
             <td>Esta declaración permite que los elementos se muevan a la siguiente linea si no hay mucho espacio en la que estan.</td>
-            <td>Flexbox froggy / Nivel 18</td>
+            <td>Froggy:18 , Adventure:19</td>
         </tr>        
         <tr>
             <td>flex-flow: column wrap;</td>
             <td>Esta declaración lo que hace es colocar los elementos en columnas y si no caben todos los movera a una nueva.</td>
-            <td>Flexbox froggy / Nivel 20</td>
+            <td>Froggy:20</td>
         </tr>        
         <tr>
             <td>align-content: flex-start;</td>
             <td>Esta declaración pone a los elementos al principio de todo del contenedor.</td>
-            <td>Flexbox froggy / Nivel 21</td>
+            <td>Froggy:21</td>
         </tr>
         <tr>
             <td>align-content: flex-end;</td>
             <td>Esta declaración pone a los elementos en el extremo del contenedor.</td>
-            <td>Flexbox froggy / Nivel 22</td>
+            <td>Froggy:22 , Adventure:21</td>
         </tr>
         <tr>
             <td>align-content: center;</td>
             <td>Esta declaración hace que las lineas de los elementos se coloquen en el centro del contenedor.</td>
-            <td>Flexbox froggy / Nivel 23</td>
+            <td>Froggy:23 , Adventure:17/20</td>
         </tr>
         <tr>
             <td>align-content: space-between;</td>
             <td>Esta declaración hace que las lineas de los elementos se separen pero dejando el mayor espacio disponible entre ellas.</td>
-            <td>Flexbox froggy / Nivel 24</td>
+            <td>Froggy:24</td>
         </tr>
         <tr>
             <td>flex-flow: column-reverse wrap-reverse;</td>
             <td>Esta declaración hace que los elementos se apilen en columnas de abajo hacia arriba.</td>
-            <td>Flexbox froggy / Nivel 24</td>
+            <td>Froggy:24</td>
+        </tr>
+        <tr>
+            <td>justify-content: space-evenly;</td>
+            <td>Esta declaración justifica el contenido distribuyendo el espacio entre elementos de manera uniforme.</td>
+            <td>Adventure:5</td>
+        </tr>
+        <tr>
+            <td>align-self: center;</td>
+            <td>Esta declaración alinea un elemento individualmente dentro del contenedor.</td>
+            <td>Adventure:15/18/24</td>
+        </tr>
+        <tr>
+            <td>flex-wrap: wrap-reverse;</td>
+            <td>Esta declaración hace que si  no hay suficiente espacio, las cosas se meten en varias filas y las pone de abajo a arriba.</td>
+            <td>Adventure:23</td>
         </tr>
     </table>
 </body>
