commit final (titulo corregido)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="titulo1">TABLAS EJERCICIOS:</h1>
     </header>
     <table class="tabla">
-        <h2 id="titulo2">Flexbox froggy:</h2>
+        <h2 id="titulo2">Froggy / Defense / Adventure</h2>
         <tr>
             <th>Declaración</th>
             <th>Descripción</th>
